Complete contact page BS all views and testing

--- a/scss/blocks/contact/contact-resp-form-dtls/_contact-resp-form-dtls.scss
+++ b/scss/blocks/contact/contact-resp-form-dtls/_contact-resp-form-dtls.scss
@@ -36,3 +36,9 @@
 .contact-rfd-gy-6 {
   --bs-gutter-y: 4.5rem;
 }
+
+.contact-rfd-gx-xl-6 {
+  @include media-breakpoint-up(xl) {
+    --bs-gutter-x: 4.5rem;
+  }
+}
