--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -27,6 +27,8 @@
 // || Block - Hero trans banner anim
 .hero-tba-contact {
    padding-bottom: 100px;
-}
 
-.hero-tba-contact-br {}
+   @include media-breakpoint-up(xl) {
+      padding-top: 220px;
+   }
+}
