Create portfolio page base structure and change other pages tittle

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,7 @@
 @import 'pages/services';
 @import 'pages/team';
 @import 'pages/contact';
+@import 'pages/portfolio';
 
 // Themes
 @import 'themes/default-theme';
