Complete portfolio page BS all views and testing

--- a/scss/blocks/portfolio/portfolio-metro-anim-filter/_portfolio-metro-anim-filter.scss
+++ b/scss/blocks/portfolio/portfolio-metro-anim-filter/_portfolio-metro-anim-filter.scss
@@ -12,6 +12,10 @@
 
 .pf-maf-filter-row {
   margin-bottom: 80px;
+
+  @include media-breakpoint-up(md) {
+    margin-bottom: 90px;
+  }
 }
 
 .pf-maf-filter-tittle-col {
