Create project details page base structure

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,6 +83,7 @@
 @import 'pages/team';
 @import 'pages/contact';
 @import 'pages/portfolio';
+@import 'pages/project-dtails';
 
 // Themes
 @import 'themes/default-theme';
