--- a/scss/pages/_project-dtails.scss
+++ b/scss/pages/_project-dtails.scss
@@ -11,7 +11,15 @@
 // removing any block or component it is ease to know and uncomment to the 
 // dependencies
 
+// || Block - Hero trans banner anim
+// @import '../components/text/text-lead-list-marker/text-lead-list-marker';
+// @import '../components/animation/anim-gsap/anim-gsap';
+// @import '../components/animation/anim-slide-in-up/anim-slide-in-up';
+// @import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
 
+// || Block - project-details-img-parallax (Project details with images and pararllax animation)
+@import '../components/animation/anim-parallax-bottom-top/anim-parallax-bottom-top';
+@import '../blocks/project/project-details-img-parallax/project-details-img-parallax';
 
 // || Block - Lead parallax bg sp (sides padding)
 // @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
@@ -22,3 +30,12 @@
 
 // || Block - Footer responsive cols lead
 // @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
+
+.hero-tba-project-dtls {
+   padding-top: 120px;
+   padding-bottom: 120px;
+}
+
+.hero-tba-pd-display-ctr {
+   height: 70vh;
+}
