Complete sass style optimize for page specific styles

--- a/src/scss/blocks/hero/hero-lead-img-anim/_hero-lead-img-anim.scss
+++ b/src/scss/blocks/hero/hero-lead-img-anim/_hero-lead-img-anim.scss
@@ -88,6 +88,6 @@
 }
 
 .hero-lia-pattern {
-  background: url(../images/pattern-grid.png) left top / cover no-repeat;
+  background: url(../../images/pattern-grid.png) left top / cover no-repeat;
   pointer-events: none;
 }
