--- a/src/scss/components/card/card-lead-icon-bg/_card-lead-icon-bg.scss
+++ b/src/scss/components/card/card-lead-icon-bg/_card-lead-icon-bg.scss
@@ -7,7 +7,7 @@
 
 .card-lead-icon-bg {
    padding: 40px 30px;
-   background: url(../images/company/card-background-pattern.png) center / cover no-repeat, white;
+   background: url(../../images/company/card-background-pattern.png) center / cover no-repeat, white;
 
    @include media-breakpoint-up(xl) {
       padding: 60px 40px;
