--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -1,7 +1,6 @@
 /* || Page - About
   =========================================================================== */
 
-
 // 1. Notes
 // Each block/component with comment listed its dependencies 
 // Make sure no repeated @import as it duplicate itself due to the use of @import 
@@ -12,21 +11,25 @@
 // removing any block or component it is ease to know and uncomment to the 
 // dependencies
 
+// || Main
+@import '../main';
+
 // || Block - Hero trans banner anim
 @import '../components/text/text-lead-list-marker/text-lead-list-marker';
-// @import '../components/animation/anim-gsap/anim-gsap';
+@import '../components/animation/anim-gsap/anim-gsap';
 @import '../components/animation/anim-slide-in-up/anim-slide-in-up';
-// @import '../components/banner/banner-infinite-roll/banner-infinite-roll';
+@import '../components/banner/banner-infinite-roll/banner-infinite-roll';
 @import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
 
 // || BLock - Company our story base
-// @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
+@import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
 @import '../blocks/company/company-our-story-base/company-our-story-base';
 
 // || Block - Services cards lead icon
-// @import '../components/card/card-lead-icon/card-lead-icon';
-// @import '../blocks/services/services-cards-lead-icon/services-cards-lead-icon';
+// @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
+@import '../components/card/card-lead-icon/card-lead-icon';
+@import '../blocks/services/services-cards-lead-icon/services-cards-lead-icon';
 
 // || Block - Service features aic ( accordian image component)
 @import '../components/image/image-overlap-tile-bar/image-overlap-tile-bar';
@@ -47,16 +50,20 @@
 @import '../blocks/team/team-profiles-anim-st/_team-profiles-anim-st';
 
 // || Block - Brands card list responsive
+// @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
+// @import '../components/animation/anim-gsap/anim-gsap';
 @import '../components/card/card-hover-swap-elem/card-hover-swap-elem';
 @import '../blocks/brand/brands-cards-list-responsive/brands-cards-list-responsive';
 
 // || Block - Lead parallax bg sp (sides padding)
 // @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
-// @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
+@import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
 @import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
 @import '../blocks/lead/lead-parallax-bg-sp/lead-parallax-bg-sp';
 
 // || Block - Footer responsive cols lead
-// @import '../components/banner/banner-lg-text-stroke/banner-lg-text-stroke';
-// @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
+@import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
+
+// || Themes
+@import '../themes/default-theme';
