--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -7,19 +7,8 @@
 // instead of @use, we will replace this aproach once start migrate to @use 
 // implemented bootstrap.
 
-@import '../components/sticky/sticky-header-top-anim/sticky-header-top-anim';
-
-// || Component - Navbar responsive manu center
-@import '../components/text/rolling-text/rolling-text';
-@import '../components/form/form-search-anim/form-search-anim';
-@import '../components/navigation/navbar-responsive-menu-center/navbar-responsive-menu-center';
-
-@import '../components/loader/loader-full-wh-anim/loader-full-wh-anim';
-@import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
-
-// || Component - Scroll smoother gsap
-@import '../components/scroll-to-top/scroll-to-top-btn-anim/scroll-to-top-btn-anim';
-@import '../components/scroll/scroll-smoother-gsap/scroll-smoother-gsap';
+// || Main
+@import '../main';
 
 // || Block - Hero lead image animation
 // @import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
@@ -61,3 +50,6 @@
 // || Block - Footer responsive cols lead
 @import '../components/banner/banner-lg-text-stroke/banner-lg-text-stroke';
 @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
+
+// || Themes
+@import '../themes/default-theme';
