--- a/src/scss/pages/project-details.scss
+++ b/src/scss/pages/project-details.scss
@@ -11,16 +11,19 @@
 // removing any block or component it is ease to know and uncomment to the 
 // dependencies
 
+// || Main
+@import '../main';
+
 // || Block - Hero trans banner anim
-// @import '../components/text/text-lead-list-marker/text-lead-list-marker';
-// @import '../components/animation/anim-gsap/anim-gsap';
-// @import '../components/animation/anim-slide-in-up/anim-slide-in-up';
-// @import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
+@import '../components/text/text-lead-list-marker/text-lead-list-marker';
+@import '../components/animation/anim-gsap/anim-gsap';
+@import '../components/animation/anim-slide-in-up/anim-slide-in-up';
+@import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
 
 // || Block - project-details-img-parallax (Project details with images and pararllax animation)
-// @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
+@import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
-// @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
+@import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
 @import '../components/animation/anim-parallax-bottom-top/anim-parallax-bottom-top';
 @import '../blocks/project/project-details-img-parallax/project-details-img-parallax';
 
@@ -28,11 +31,11 @@
 // @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
 // @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
-// @import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
-// @import '../blocks/lead/lead-parallax-bg-sp/lead-parallax-bg-sp';
+@import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
+@import '../blocks/lead/lead-parallax-bg-sp/lead-parallax-bg-sp';
 
 // || Block - Footer responsive cols lead
-// @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
+@import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
 
 .hero-tba-project-dtls {
    padding-top: 120px;
@@ -56,3 +59,6 @@
       font-size: 70px;
    }
 }
+
+// || Themes
+@import '../themes/default-theme';
