--- a/src/scss/pages/team.scss
+++ b/src/scss/pages/team.scss
@@ -12,35 +12,37 @@
 // removing any block or component it is ease to know and uncomment to the 
 // dependencies
 
+// || Main
+@import '../main';
+
 // || Block - Hero trans banner anim
-// @import '../components/text/text-lead-list-marker/text-lead-list-marker';
-// @import '../components/animation/anim-gsap/anim-gsap';
-// @import '../components/animation/anim-slide-in-up/anim-slide-in-up';
-// @import '../components/banner/banner-infinite-roll/banner-infinite-roll';
-// @import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
+@import '../components/text/text-lead-list-marker/text-lead-list-marker';
+@import '../components/animation/anim-gsap/anim-gsap';
+@import '../components/animation/anim-slide-in-up/anim-slide-in-up';
+@import '../components/banner/banner-infinite-roll/banner-infinite-roll';
+@import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
 
 // || Block - Team profile anim st (sticky header)
 // @import '../components/banner/banner-infinite-roll/banner-infinite-roll';
 // @import '../components/animation/anim-gsap/anim-gsap';
-// @import '../components/image/image-foreground-rt/image-foreground-rt';
+@import '../components/image/image-foreground-rt/image-foreground-rt';
 @import '../blocks/team/team-profiles-card-anim/team-profiles-card-anim';
 
 // || Block - tm-swiper-cards-resp-ct (Testimonials swiper cards responsive controls top)
-// @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
+@import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
-// @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
+@import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
 @import '../blocks/testimonial/tm-swiper-cards-resp-ct/tm-swiper-cards-resp-ct';
 
 // || Block - Lead parallax bg sp (sides padding)
 // @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
 // @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
-// @import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
-// @import '../blocks/lead/lead-parallax-bg-sp/lead-parallax-bg-sp';
+@import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
+@import '../blocks/lead/lead-parallax-bg-sp/lead-parallax-bg-sp';
 
 // || Block - Footer responsive cols lead
-// @import '../components/banner/banner-lg-text-stroke/banner-lg-text-stroke';
-// @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
+@import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
 
 // || Block - Hero trans banner anim
 .hero-tba-team {
@@ -54,3 +56,6 @@
     }
   }
 }
+
+// || Themes
+@import '../themes/default-theme';
