swiper js seperated using shared module feature of webpack

--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -62,7 +62,7 @@
 @import 'swiper/scss';
 @import 'swiper/scss/navigation';
 
-// 1. Abstracts
+// Abstracts
 @import 'abstracts/mixins-ls';
 
 // Base
